--- a/JwtAuth/Client/Pages/Counter.razor
+++ b/JwtAuth/Client/Pages/Counter.razor
@@ -1,4 +1,10 @@
 ﻿@page "/counter"
+@using JwtAuth.Client.Services
+@using Microsoft.AspNetCore.Authorization
+
+@inject IAuthenticationService _authenticationService
+
+@attribute [Authorize(Roles = "User")]
 
 <PageTitle>Counter</PageTitle>
 
@@ -14,5 +20,10 @@
     private void IncrementCount()
     {
         currentCount++;
+    }
+
+    protected async override Task OnInitializedAsync()
+    {
+        //await _authenticationService.SendAuthenticatedRequest();
     }
 }
